--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 BOT_TOKEN=PUT_YOUR_DISCORD_BOT_TOKEN
 MONGO_URI=PUT_YOUR_MONGO_CONNECTION_STRING
+DISCORD_CLIENT_ID=YOUR_CLIENT_ID
+DISCORD_CLIENT_SECRET=YOUR_CLIENT_SECRET
+DISCORD_CALLBACK_URL=http://localhost:3000/auth/discord/callback
